--- a/arcadecoder_hw/Cargo.toml
+++ b/arcadecoder_hw/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 embassy-time = "0.4.0"
 embedded-hal = "1.0.0"
-esp-hal = { version = "1.0.0-beta.0", features = ["esp32"] }
+esp-hal = { version = "0.23.1", features = ["esp32"] }
 esp-println = { version = "0.13.1", features = ["esp32", "log"] }
+nb = "1.1.0"
