--- a/arcadecoder_hw/Cargo.toml
+++ b/arcadecoder_hw/Cargo.toml
@@ -4,8 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+embassy-futures = "0.1.1"
 embassy-time = "0.4.0"
 embedded-hal = "1.0.0"
-esp-hal = { version = "0.23.1", features = ["esp32"] }
+esp-hal = { version = "0.23.1", features = ["esp32", "unstable"] }
 esp-println = { version = "0.13.1", features = ["esp32", "log"] }
-nb = "1.1.0"
+
+[dev-dependencies]
+embassy-executor = { version = "0.7.0" }
+esp-hal-embassy = { version = "0.6.0", features = ["esp32"] }
+esp-backtrace = { version = "0.15.1", features = [
+    "esp32",
+    "panic-handler",
+    "println",
+] }
