--- a/arcadecoder_hw/Cargo.toml
+++ b/arcadecoder_hw/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2021"
 embassy-futures = "0.1.1"
 embassy-time = "0.4.0"
 embedded-hal = "1.0.0"
-esp-hal = { version = "0.23.1", features = ["esp32", "unstable"] }
-esp-println = { version = "0.13.1", features = ["esp32", "log"] }
+esp-hal = { version = "1.0.0-rc.0", features = ["esp32", "unstable"] }
+esp-println = { version = "0.15.0", features = ["esp32"] }
 
 [dev-dependencies]
 embassy-executor = { version = "0.7.0" }
-esp-hal-embassy = { version = "0.6.0", features = ["esp32"] }
-esp-backtrace = { version = "0.15.1", features = [
+esp-hal-embassy = { version = "0.9.0", features = ["esp32"] }
+esp-backtrace = { version = "0.17.0", features = [
     "esp32",
     "panic-handler",
     "println",
