--- a/scoreboard/Cargo.toml
+++ b/scoreboard/Cargo.toml
@@ -9,18 +9,19 @@ path = "./src/bin/main.rs"
 
 [dependencies]
 critical-section = "1.2.0"
-esp-hal = { version = "0.23.1", features = ["esp32", "unstable"] }
-esp-println = { version = "0.13.1", features = ["esp32", "log"] }
+esp-hal = { version = "1.0.0-rc.0", features = ["esp32", "unstable"] }
+esp-println = { version = "0.15.0", features = ["esp32"] }
 arcadecoder_hw = { path = "../arcadecoder_hw" }
 log = "0.4.27"
 embassy-executor = { version = "0.7.0" }
 embassy-time = { version = "0.4.0" }
-esp-hal-embassy = { version = "0.6.0", features = ["esp32"] }
-esp-backtrace = { version = "0.15.1", features = [
+esp-hal-embassy = { version = "0.9.0", features = ["esp32"] }
+esp-backtrace = { version = "0.17.0", features = [
     "esp32",
     "panic-handler",
     "println",
 ] }
 embassy-futures = "0.1.1"
-embassy-sync = "0.6.2"
-static_cell = "2.1.0"
+embassy-sync = "0.7.1"
+static_cell = "2.1.1"
+esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
