--- a/arcadecoder_hw/Cargo.toml
+++ b/arcadecoder_hw/Cargo.toml
@@ -4,18 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-embassy-futures = "0.1.1"
-embassy-sync = "0.7.2"
-embassy-time = "0.4.0"
-embedded-hal = "1.0.0"
+embassy-sync = { version = "0.7.2", optional = true }
 esp-hal = { version = "1.0.0-rc.0", features = ["esp32", "unstable"] }
 esp-println = { version = "0.15.0", features = ["esp32"] }
 
-[dev-dependencies]
-embassy-executor = { version = "0.7.0" }
-esp-hal-embassy = { version = "0.9.0", features = ["esp32"] }
-esp-backtrace = { version = "0.17.0", features = [
-    "esp32",
-    "panic-handler",
-    "println",
-] }
+[features]
+embassy = ["dep:embassy-sync"]
