--- a/scoreboard/Cargo.toml
+++ b/scoreboard/Cargo.toml
@@ -11,7 +11,7 @@ path = "./src/bin/main.rs"
 critical-section = "1.2.0"
 esp-hal = { version = "1.0.0-rc.0", features = ["esp32", "unstable"] }
 esp-println = { version = "0.15.0", features = ["esp32"] }
-arcadecoder_hw = { path = "../arcadecoder_hw" }
+arcadecoder_hw = { path = "../arcadecoder_hw", features = ["embassy"] }
 log = "0.4.27"
 embassy-executor = { version = "0.7.0" }
 embassy-time = { version = "0.4.0" }
